--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Capriola&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -16,4 +17,57 @@ header{
 }
 .logo{
     height: 10vh;
+}
+
+main{
+    display: flex;
+    width: 100%;
+    height: 90vh;
+    flex-direction: column;
+}
+
+.irPara{
+    display: flex;
+    align-items: center;
+    padding-left: 90%;
+}
+
+.ir{
+    font-size: 20px;
+    color: #003882;
+}
+
+.textInput{
+    font-size: 22px;
+    font-family: 'Capriola', sans-serif;
+    color: #464646;
+}
+
+.form1{
+    height: 300px;
+    width: 20vw;
+}
+
+.padrao{
+    height: 35px;
+}
+
+#cvv{
+    height: 35px;
+    width: 120px;
+}
+
+#dataValidade{
+    height: 35px;
+    width: 120px;
+}
+
+.textConfirma{
+    font-size: 36px;
+    color: #F24E1E;
+    font-family: 'Capriola', sans-serif;
+}
+
+.container{
+    
 }
