--- a/style.css
+++ b/style.css
@@ -24,17 +24,24 @@ main{
     width: 100%;
     height: 90vh;
     flex-direction: column;
+    align-items: center;
 }
 
 .irPara{
+    margin-top: 5px;
     display: flex;
     align-items: center;
-    padding-left: 90%;
+    padding-left: 88%;
+}
+
+.irPara:hover{
+    cursor: pointer;
 }
 
 .ir{
     font-size: 20px;
     color: #003882;
+    width: 10vw;
 }
 
 .textInput{
@@ -44,30 +51,68 @@ main{
 }
 
 .form1{
-    height: 300px;
-    width: 20vw;
+    display: flex;
+    flex-wrap: wrap;
+    height: 150px;
+    width: 45vw;
+    gap: 45px;
+    margin-top: 35px;
+}
+
+.test{
+    display: flex;
+    flex-direction: column;
 }
 
 .padrao{
     height: 35px;
+    width: 280px;
 }
 
 #cvv{
     height: 35px;
     width: 120px;
+    border-radius: 4px;
 }
 
 #dataValidade{
     height: 35px;
-    width: 120px;
+    width: 180px;
+    border-radius: 4px;
 }
 
 .textConfirma{
+    margin-top: 8px;
     font-size: 36px;
     color: #F24E1E;
     font-family: 'Capriola', sans-serif;
 }
 
 .container{
-    
+    padding: 30px 0px 0px 200px;
+}
+
+.borda{
+    border-radius: 4px;
+}
+
+.ajuste{
+    margin-top: 40px;
+}
+
+#senha{
+    height: 35px;
+    width: 280px;
+    border-radius: 4px;
+}
+
+button{
+    background-color: #FDE100;
+    font-family: 'Capriola', sans-serif;
+    height: 5vh;
+    width: 13vh;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0px 4px 4px 0px #00000040;
+    font-size: 20px;
 }
